<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E1E1E1"
                tools:context=".activity.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            <com.atiurin.espressoguide.view.CircleImageView
                    android:id="@+id/toolbar_avatar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/chandler"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@android:color/transparent"/>
            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:paddingLeft="16dp"
                    />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@+id/app_toolbar"
            android:layout_above="@+id/message_panel"
    />


    <LinearLayout android:id="@+id/message_panel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentEnd="true"
                  android:background="#FFFFFF"
                  android:paddingBottom="2dp"
                  android:orientation="vertical">

        <View style="@style/Divider"
              android:background="#8E8E8E"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/attach_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_attach_file"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
            />
            <EditText
                    android:id="@+id/message_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48sp"
                    android:maxHeight="110sp"
                    android:maxLines="4"
                    android:background="@null"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="3"
                    android:paddingStart="16dp"
                    android:paddingLeft="6dp"
                    android:paddingTop="8dp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:hint="Enter text"/>

            <ImageView
                    android:id="@+id/send_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_send"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>