<resources>
    <string name="app_name">EspressoGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_add_blacklist">Add to blacklist</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_saved_messages">Saved messages</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="title_friends_list">F.R.I.E.N.D.S</string>
    <string name="login_help">User: \'joey\',  Password: \'1234\'</string>
</resources>
