...
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:id="@+id/tv_status"
                        android:gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2B2B2B"
                        android:textStyle="italic"
                        android:textSize="16sp" />
...
